# tools

./: .gitignore  README.md  check-tournament.py
.github/workflows/: blank.yml  drive_to_es.yml  pythonapp.yml
DEPRECATED_powertop-to-es/: requirements.txt
DEPRECATED_powertop-to-es/app/: main.py
DEPRECATED_powertop-to-es/test/: test-toes.py
apps/economy/: .dockerignore  Makefile  __main__.py  pyproject.toml
apps/economy/economy/: client.py
apps/economy/tests/: test_persistence.py
check-tournament/: check-tournament.py  requirements.txt
create-new-sheets-by-month-names/: CreateMonthlyIncomeSheet.js
docker/: docker-compose.yml  docker-compose.yml.elastic
economy/: Dockerfile  Makefile  __main__.py  pyproject.toml  requirements.txt
economy/economy/: client.py  model.py  persistence.py
economy/etc/: config.json  elasticsearch-index-template-statistical-analysis.json
household_expenses/create_sheet_by_month/: Code.js
household_expenses/publish/drive_to_es/: .dockerignore  Dockerfile  Makefile  README.md  __main__.py  pyproject.toml  requirements.txt
household_expenses/publish/drive_to_es/drive_to_es/: __init__.py  client.py  entities.py  values.py
household_expenses/publish/drive_to_es/pkgs/: client.py  entities.py  values.py
household_expenses/publish/drive_to_es/tests/: conftest.py  test_client.py  test_entitites.py
household_expenses/publish/drive_to_es/tests/fixtures/: report.csv
household_expenses/publish/sheet_to_drive/: modules.js
powertop-to-es/: powertop-to-es.py  powertop.py  test-powertop.py
powertop-to-es/test/: test-powertop.py
realestates/: go.mod  main.go
realestates/internal/: lang.go
scripts/ping_parser/: crontab  ingest-pipeline.json  ping.sh
sheets-to-es/: .gitignore  HOWTO.md  Makefile  Makefile.app  Makefile.gas
sheets-to-es/app/: Dockerfile  __main__.py  requirements.txt
sheets-to-es/app/pkgs/: __init__.py  client.py  schema.py
sheets-to-es/gas/: modules.gs
stocks/: Dockerfile  Makefile  __main__.py  requirements.txt
stocks/stocks/: client.py  model.py  persistence.py
used_mansion/: go.mod  main.go
used_mansion/internal/: client.go  download.go  error.go
