[tool.poetry]
name = "economy"
version = "0.1.0"
description = ""
authors = ["Yu Watanabe <yu.w.tennis@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
yfinance = "^0.2"
elasticsearch-dsl = "^7.0.0"
pytest = "^7.1.2"
requests = "^2.28.0"
elasticsearch = "^7.17.4"
beautifulsoup4 = "^4.12.2"
soupsieve = "^2.4.1"
pip = "~21.3.1"
wheel = "~0.37.1"
attrs = "~22.2.0"
pluggy = "~1.0.0"
exceptiongroup = "~1.1.0"
iniconfig = "~2.0.0"
certifi = "~2023.5.7"
six = "~1.16.0"
python-dateutil = "~2.8.2"
idna = "~3.4"
urllib3 = "~1.26.15"
setuptools = "~65.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
